--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"postcss": "^8.4.31",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-heros-v2": "^0.10.12",
 		"tailwindcss": "^3.3.5",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
