--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,8 @@ node_modules
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
+# IntelliJ/WebStorm/etc.
+.idea/
+
 # Configuration:
 src/lib/app.config.js
