--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@supabase/supabase-js": "^2.39.0"
+		"@supabase/supabase-js": "^2.39.0",
+		"heroicons": "^2.1.1"
 	}
 }
