Retrieve featured projects from the GitHub api
Other changes:
- Add README
- Code cleanup

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"graphql": "^16.8.1",
+		"graphql-request": "^6.1.0",
 		"heroicons": "^2.1.1"
 	}
 }
