Query GitHub api on the server side in order to not expose the key

--- a/src/lib/githubapi/graphql.config.yml
+++ b/src/lib/githubapi/graphql.config.yml
@@ -2,6 +2,6 @@
 schema:
   - https://api.github.com/graphql:
       headers:
-        Authorization: bearer ${PUBLIC_GITHUB_PAT}
+        Authorization: bearer ${GITHUB_PAT}
 
 documents: './*.graphql'
