--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
 	"dependencies": {
 		"graphql": "^16.8.1",
 		"graphql-request": "^6.1.0",
-		"heroicons": "^2.1.1"
+		"simple-icons": "^11.2.0"
 	}
 }
